--- a/css/custom.css
+++ b/css/custom.css
@@ -118,6 +118,8 @@ body {
 .btn-transparent {
 	/* background-color: rgba(245, 245, 245, 0.4); */
 	background-color: #67b7e1;
+	border-color: #fff;
+	color: #fff;
 }
 
 
